ci(workflow): 优化 GitHub Pages 部署流程
- 移除冗余的输出配置和注释
- 添加部署条件限制为 pages 分支的 push 事件
- 简化失败通知步骤

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,9 +70,7 @@ jobs:
           chmod -R 755 docs/_site
           echo "Set permissions 755 recursively on build output"
       
-      # Pages配置已移至手动设置，直接上传构建产物
-      
-      - name: Upload artifact
+      - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: './docs/_site'
@@ -81,10 +79,7 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-    
-    # Error handling and notifications
-    outputs:
-      deployment_url: ${{ steps.deployment.outputs.page_url }}
+        if: github.event_name == 'push' && github.ref == 'refs/heads/pages'
     
     env:
       # Add any additional environment variables here
@@ -98,30 +93,8 @@ jobs:
     steps:
       - name: Notify on failure
         run: |
-          echo "::error::Deployment failed for commit ${{ github.sha }}"
+          echo "::error::Build/deployment failed for commit ${{ github.sha }}"
           echo "Repository: ${{ github.repository }}"
           echo "Branch: ${{ github.ref_name }}"
           echo "Commit message: ${{ github.event.head_commit.message }}"
           echo "Author: ${{ github.event.head_commit.author.name }} <${{ github.event.head_commit.author.email }}>"
-        
-      # Optional: Add email notification using SMTP or a service like SendGrid
-      # - name: Send email notification
-      #   uses: dawidd6/action-send-mail@v3
-      #   with:
-      #     server_address: ${{ secrets.SMTP_SERVER }}
-      #     server_port: ${{ secrets.SMTP_PORT }}
-      #     username: ${{ secrets.SMTP_USERNAME }}
-      #     password: ${{ secrets.SMTP_PASSWORD }}
-      #     subject: Deployment failed - ${{ github.repository }}
-      #     body: |
-      #       Deployment failed for commit ${{ github.sha }}
-      #       
-      #       Repository: ${{ github.repository }}
-      #       Branch: ${{ github.ref_name }}
-      #       Commit: ${{ github.sha }}
-      #       Commit message: ${{ github.event.head_commit.message }}
-      #       Author: ${{ github.event.head_commit.author.name }} <${{ github.event.head_commit.author.email }}>
-      #       
-      #       Check the workflow run for details: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-      #     to: ${{ env.NOTIFICATION_EMAIL }}
-      #     from: GitHub Actions <noreply@github.com>
