docs: 更新文档配置和资源路径
更新GitHub Pages的基础URL和仓库信息
将静态资源路径从/assets/改为/js/和/css/

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,10 +5,10 @@ author: Your Name
 email: your.email@example.com
 
 # GitHub Pages 设置
-baseurl: ""
-url: "https://yourusername.github.io"
+baseurl: "/hammerspoon"
+url: "https://na57.github.io"
 github:
-  repository_url: https://github.com/yourusername/hammerspoon
+  repository_url: https://github.com/na57/hammerspoon
   repository_name: hammerspoon
 
 # Markdown 设置
