docs: 更新文档标题和作者信息为na57
将文档标题和作者信息统一更新为na57的个人信息，保持文档一致性

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,8 @@
-title: Hammerspoon 配置指南
+title: na57 的 Hammerspoon 配置指南
 description: 提高 macOS 使用效率的自动化工具配置指南
 keywords: Hammerspoon, macOS, 自动化, 快捷键, 配置指南
-author: Your Name
-email: your.email@example.com
+author: na57
+email: na57@qq.com
 
 # GitHub Pages 设置
 baseurl: "/hammerspoon"
