ci: 添加 GitHub Actions 所需的权限配置

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -10,6 +10,11 @@ on:
     types:
       - closed
 
+permissions:
+  contents: write
+  issues: read
+  pull-requests: read
+
 jobs:
   create-release:
     if: (github.event_name == 'push' && github.ref == 'refs/heads/release') || (github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true)
